fix spacing #2

--- a/ontour/src/index.css
+++ b/ontour/src/index.css
@@ -247,24 +247,24 @@ body {
 /* Row Spacing */ 
 
 #gallery {
-  margin-top: 3%;
-  margin-bottom: 2%;
+  margin-top: 30px;
+  margin-bottom: 20px;
 }
 
 hr {
-  margin-top: 9%;
+  margin: 0;
+  margin-top: 40px;
   clear: left;
 }
 
 #reviews {
-  margin-top: 2%;
-  margin-bottom: 3%;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 #write-review {
-  margin-top: 2%;
+  margin-top: 30px;
   padding-bottom: 0;
-  margin-bottom: 1%;
 }
 
 #write-a-review {
